--- a/Fraudulent_transactions_Detection_ML_model.ipynb
+++ b/Fraudulent_transactions_Detection_ML_model.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "mount_file_id": "1hGXltVuD_mBKYvssf7J-hdjb5pFwgfMa",
-      "authorship_tag": "ABX9TyPDdHCJRZ654ss/Vt3IXdQH",
+      "authorship_tag": "ABX9TyMRKq9evrMRXUV8lCOz7dSh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,6 +31,30 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Probelm Statement / Business Context**\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "This case requires trainees to develop a model for predicting fraudulent transactions for a \n",
+        "financial company and use insights from the model to develop an actionable plan. Data for the \n",
+        "case is available in CSV format having 6362620 rows and 10 columns.\n",
+        "Candidates can use whatever method they wish to develop their machine learning model. \n",
+        "Following usual model development procedures, the model would be estimated on the \n",
+        "calibration data and tested on the validation data. This case requires both statistical analysis and \n",
+        "creativity/judgment. We recommend you spend time on both fine-tuning and interpreting the \n",
+        "results of your machine learning model.\n",
+        "\n",
+        "---\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "L727ZUk2PA2J"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import pandas as pd  \n",
@@ -49,6 +73,7 @@
       "cell_type": "code",
       "source": [
         "df = pd.read_csv('/content/drive/MyDrive/Fraud (1).csv')\n",
+        "\n",
         "df.head(5)"
       ],
       "metadata": {
@@ -270,6 +295,41 @@
           "execution_count": 39
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Data Fields\n",
+        "\n",
+        "**step** - maps a unit of time in the real world. In this case 1 step is 1 hour of time. Total steps 744 (30 days simulation).\n",
+        "\n",
+        "**type** - CASH-IN, CASH-OUT, DEBIT, PAYMENT and TRANSFER.\n",
+        "\n",
+        "**amount** - amount of the transaction in local currency.\n",
+        "\n",
+        "**nameOrig** - customer who started the transaction\n",
+        "\n",
+        "**oldbalanceOrg** - initial balance before the transaction\n",
+        "\n",
+        "**newbalanceOrig** - new balance after the transaction\n",
+        "\n",
+        "**nameDest** - customer who is the recipient of the transaction\n",
+        "\n",
+        "**oldbalanceDest** - initial balance recipient before the transaction. Note that there is not information for customers that start with M (Merchants).\n",
+        "\n",
+        "**newbalanceDest** - new balance recipient after the transaction. Note that there is not information for customers that start with M (Merchants).\n",
+        "\n",
+        "**isFraud** - This is the transactions made by the fraudulent agents inside the simulation. In this specific dataset the fraudulent behavior of the agents aims to profit by taking control or customers accounts and try to empty the funds by transferring to another account and then cashing out of the system.\n",
+        "\n",
+        "**isFlaggedFraud** - The business model aims to control massive transfers from one account to another and flags illegal attempts. An illegal attempt in this dataset is an attempt to transfer more than 200.000 in a single transaction.\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "WdzS6RhpPSiW"
+      }
     },
     {
       "cell_type": "code",
