--- a/Fraudulent_transactions_Detection_ML_model.ipynb
+++ b/Fraudulent_transactions_Detection_ML_model.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "mount_file_id": "1hGXltVuD_mBKYvssf7J-hdjb5pFwgfMa",
-      "authorship_tag": "ABX9TyMoPOGOU6ozHRQdTUf5FFzV",
+      "authorship_tag": "ABX9TyNESJPFvnMRQm0VxgCFydyx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,6 +67,7 @@
         "from sklearn.preprocessing import RobustScaler\n",
         "from sklearn.preprocessing import LabelEncoder\n",
         "from imblearn.over_sampling import SMOTE\n",
+        "from sklearn.metrics import mean_squared_error\n",
         "# Model training libraries\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.model_selection import StratifiedKFold\n",
@@ -77,7 +78,7 @@
       "metadata": {
         "id": "7K5q6mlZX82i"
       },
-      "execution_count": 23,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -1232,6 +1233,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#Data Scaling"
+      ],
+      "metadata": {
+        "id": "qsmf65G7fGZn"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "rs = RobustScaler()\n",
@@ -1268,9 +1278,53 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "lr = LogisticRegression() #creating object to library function\n",
+        "lr.fit(X_train,y_train) #fitting training data\n",
+        "train_prediction = lr.predict(X_train) #only independent feature should be give for prediction\n",
+        "test_prediction = lr.predict(X_test)"
+      ],
       "metadata": {
         "id": "P42eHMmRel5Y"
+      },
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "a7kKk23fgnRV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Mean squared error Train : \",mean_squared_error(y_train,train_prediction))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wuvHhR4DgKWv",
+        "outputId": "f15cc579-2936-4a5d-e5b9-5de4ef80ee0e"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mean squared error Train :  0.18597483934554782\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "0UdbWyPfgMFT"
       },
       "execution_count": null,
       "outputs": []
